# kgtools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
kgtools/graph/: build_graph.py
kgtools/preprocessing/: __init__.py  extract_text.py  normalize_text.py
kgtools/schemas/: graph.py  preprocessing.py
preprocessing/: __init__.py  extract_text.py  normalize_text.py
tests/data/: test.txt
tests/graph/: test_graph.py
tests/preprocessing/: test_extract_text.py  test_normalize.py
